java-app-jenkinsfile-k8s-files/k8s-manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-spring-app-ingress
  annotations:
    # Azure Application Gateway-specific annotations
    #appgw.ingress.kubernetes.io/ssl-redirect: "true"  # Force HTTPS redirection
    #appgw.ingress.kubernetes.io/appgw-ssl-certificate: "mysslcert"  # Name of the SSL cert in Azure App GW
    #appgw.ingress.kubernetes.io/backend-path-prefix: "/"  # Rewrite path if needed
spec:
  ingressClassName: azure-application-gateway
  #tls:
    #- hosts:
       # - myapp.example.com  # Replace with your domain
      #secretName: my-tls-secret  # Optional: Use if storing cert in Kubernetes Secret
  rules:
    - host: myapp.example.com  # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-spring-app  # Name of the Service
                port:
                  number: 80  # Service port (matches the Service YAML)
